# Akela

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  RULES.md  SECURITY.md  checklist.md  gitcommand.md  log.txt  package.json  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: audio_issue.md  bug_report.md  feature_request.md
.github/workflows/: release.yml  windows-release.yml
DOC/: Akela — Database Schema Document.md  Akela — Development Order Document.md  Akela — Engineering Responsibilities D.md  Akela — Engineering Roadmap.md  Akela — Initial Build Plan.md  Akela — MVP Milestone Plan.md  Akela — Module Breakdown Document.md  Akela — Recommended Crates & Libraries.md  Akela — Repository Structure.md  Akela — STT Engine Implementation Plan.md  Akela — Software Architecture Document.md  Github workflow.md  akela_audio_engine_implementation_masterplan.md
MockUI/: CapsuleOverlay.tsx  demo_UI_url.txt
STT/: 1.py  2_implementation.py  3_basic_Example.py  4_Import_dependency.py  5_Define State and Display Classes.py  6_Define Audio Handling Functions.py  7_Define Helper Functions.py  8_Define Stream Handling Functions.py  9_Define the Main Function.py  command.txt  dual_delay_stt.py  file_stt.py  pyaudio_utils.py  requirements.txt  simple_stt.py
docs/: architecture.md  audio-pipeline.md  database-schema.md  overlay-system.md
native-overlay/: Cargo.toml
scripts/: download_model.js
src/: App.css  App.tsx
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: audio_buffer.rs  audio_events.rs  device_manager.rs  engine.rs  mic_capture.rs  mod.rs  silero_vad.rs  stt_worker.rs  synchronization.rs  system_capture.rs  vad_buffer.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/system/: mod.rs
src-tauri/src/window/: mod.rs
src/components/overlay/: CapsuleOverlay.css  CapsuleOverlay.tsx  SettingsPanel.css  SettingsPanel.tsx
src/hooks/: useAudioEngine.ts  useFocusSafeDrag.ts
src/services/: audioService.ts  windowService.ts
src/store/: useOverlayStore.ts  useSettingsStore.ts  useTranscriptStore.ts
