[package]
name = "akela"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "akela_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Media_Audio"] }
raw-window-handle = "0.6.2"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
tauri-plugin-window-state = "2.0.0-rc.1"

# ── Audio Capture ──
cpal = "0.15"                  # Mic input (cross-platform)
wasapi = "0.23"                # System loopback (Windows WASAPI)

# ── Audio Processing ──
rubato = "0.15"                # High-quality resampling to 16kHz
ringbuf = "0.4"                # Lock-free ring buffer for audio callbacks

# ── Voice Activity Detection ──
webrtc-vad = "0.4"             # Fast scout VAD (Google WebRTC)

# ── Speech-to-Text ──
whisper-rs = "0.16"            # whisper.cpp bindings

# ── Inter-thread Communication ──
crossbeam-channel = "0.5"      # Multi-producer channels

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

